--- a/views/invoices/issuedList.ejs
+++ b/views/invoices/issuedList.ejs
@@ -1,42 +1,55 @@
-<% layout ('layouts/boilerplate.ejs')  %> 
+<% layout ('layouts/boilerplate.ejs') %>
 <div class="container">
-    <div class="row">
-        <div class="col-12 mb-3">
-            <h5><a href="/invoices/open">Faktury k vystavení</a> | Vystavené faktury </h5>
-            <span>(<a href="/invoices/issued?show=list">seznam</a> | <a href="/invoices/issued?show=full">kompletní</a> | <a href="/invoices/issued?show=lastMonth">minulý měsíc</a> - <a href="/invoices/exportLastMonth">csv</a>)</span>
-        </div>
+  <div class="row">
+    <div class="col-12 mb-3">
+      <h5>
+        <a href="/invoices/open">Faktury k vystavení</a> | Vystavené faktury
+      </h5>
+      <span
+        >(<a href="/invoices/issued?show=list">seznam</a> |
+        <a href="/invoices/issued?show=full">kompletní</a> |
+        <a href="/invoices/issued?show=lastMonth">minulý měsíc</a> -
+        <a href="/invoices/exportLastMonth">csv</a>)</span
+      >
     </div>
-        <div class="row">
-          <div class="col-12">
-            <table class="w-100">
-              <tr>
-                <th>Číslo dokladu</th>
-                <th>Uživatel</th>
-                <th>Položka</th>
-                <th>Datum</th>
-                <th>Částka</th>
-              </tr>
-              <% invoices.forEach(invoice => { %>
-                <tr>
-                  <td><a href="/invoice/show/<%= invoice._id %>" target="_blank">CZ<%= invoice.identificationNumber %></a></td>
-                  <% if(invoice.user && invoice.user.email){ %>
-                    <td><%= invoice.user.email %></td>
-                  <% } else { %>
-                    <td>Neznámý</td>
-                  <% } %>
-                  <td>InLege Premium - 
-                    <% if (invoice.subscriptionPeriod === "yearly") { %>Roční<% } %>
-                    <% if (invoice.subscriptionPeriod === "monthly") { %>Měsíční<% } %>
-                    <% if (invoice.subscriptionPeriod === "halfyear") { %>Půlroční<% } %>
-                    <% if (invoice.subscriptionPeriod === "daily") { %>Denní<% } %>
-                  </td>
-                  <td>
-                    <%= invoice.dateIssued %>
-                  </td>
-                  <td><%= invoice.amount %> Kč</td>
-                </tr>
-              <% }) %>
-            </table>
-          </div>
-        </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <table class="w-100">
+        <tr>
+          <th>Číslo dokladu</th>
+          <th>Uživatel</th>
+          <th>Položka</th>
+          <th>Datum</th>
+          <th>Částka</th>
+        </tr>
+        <% invoices.forEach(invoice => { %>
+        <tr>
+          <td>
+            <a href="/invoice/show/<%= invoice._id %>" target="_blank"
+              >CZ<%= invoice.identificationNumber %></a
+            >
+          </td>
+          <% if(invoice.user && invoice.user.email){ %>
+          <td><%= invoice.user.email %></td>
+          <% } else { %>
+          <td>Neznámý</td>
+          <% } %> <% if (invoice.subscriptionPeriod) { %>
+          <td>
+            InLege Premium - <% if (invoice.subscriptionPeriod === "yearly") {
+            %>Roční<% } %> <% if (invoice.subscriptionPeriod === "monthly") {
+            %>Měsíční<% } %> <% if (invoice.subscriptionPeriod === "halfyear") {
+            %>Půlroční<% } %> <% if (invoice.subscriptionPeriod === "daily") {
+            %>Denní<% } %>
+          </td>
+          <% } else { %>
+          <td>Edookio AI kredity - <%= invoice.amountOfCredits %></td>
+          <% } %>
+          <td><%= invoice.dateIssued %></td>
+          <td><%= invoice.amount %> Kč</td>
+        </tr>
+        <% }) %>
+      </table>
+    </div>
+  </div>
 </div>
