--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -37,7 +37,7 @@
             <li><a class="dropdown-item" href="/admin/stats">Statistiky</a></li>
             <li><a class="dropdown-item" href="/admin/users">Uživatelé</a></li>
             <li>
-              <a class="dropdown-item" href="/invoices/open">Fakturace</a>
+              <a class="dropdown-item" href="/invoices/issued">Fakturace</a>
             </li>
             <li>
               <a class="dropdown-item" href="/admin/ratings?order=cards"
