--- a/views/invoices/issuedList.ejs
+++ b/views/invoices/issuedList.ejs
@@ -2,9 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mb-3">
-      <h5>
-        <a href="/invoices/open">Faktury k vystavení</a> | Vystavené faktury
-      </h5>
+      <h5>Vystavené faktury</h5>
       <span
         >(<a href="/invoices/issued?show=list">seznam</a> |
         <a href="/invoices/issued?show=full">kompletní</a> |
