limit size of document

--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -143,6 +143,17 @@
                                         </div>
                                     </div>
                                 </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            25 stran / dokument
+                                        </div>
+                                    </div>
+                                </li>
                                 
                                 <li>
                                     <div class="d-flex align-items-center">
@@ -238,6 +249,17 @@
                                         </div>
                                         <div class="px-2">
                                             1 000 AI kreditů / měsíc
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            150 stran / dokument
                                         </div>
                                     </div>
                                 </li>
@@ -339,6 +361,17 @@
                                         </div>
                                     </div>
                                 </li>
+
+                                <li>
+                                    <div class="d-flex align-items-center">
+                                        <div>
+                                            <i class="fas fa-check-circle"></i>
+                                        </div>
+                                        <div class="px-2">
+                                            150 stran / dokument
+                                        </div>
+                                    </div>
+                                </li>
                                 
                                 <li>
                                     <div class="d-flex align-items-center">
@@ -385,7 +418,7 @@
                 <table class="table table-bordered rounded-table">
                     <thead class="thead-light">
                       <tr>
-                        <th scope="col">Funkce</th>
+                        <th scope="col" style="width: 30%">Funkce</th>
                         <th scope="col">Free</th>
                         <th scope="col">Premium (Měsíční)</th>
                         <th scope="col">Premium (Roční)</th>
@@ -440,7 +473,7 @@
                         <td>neomezeně</td>
                         <td>neomezeně</td>
                       </tr>
-                  
+
                       <!-- AI Credits -->
                       <tr>
                         <th scope="row">Kredity na tvorbu AI obsahu</th>
@@ -448,12 +481,26 @@
                         <td>1 000 / měsíc</td>
                         <td>1 000 / měsíc</td>
                       </tr>  
-                      
+
+                      <tr>
+                        <th scope="row">Extra 1 000 AI kreditů do začátku</th>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                        <td><i class="fas fa-check text-success"></i></td>
+                      </tr>
+
                       <tr>
                         <th scope="row">Možnost dokoupení kreditů</th>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
                         <td><i class="fas fa-check text-success"></i></td>
+                      </tr> 
+
+                      <tr>
+                        <th scope="row">Generování z dokumentu</th>
+                        <td>25 stran / dokument</td>
+                        <td>150 stran / dokument</td>
+                        <td>150 stran / dokument</td>
                       </tr> 
                     </tbody>
                   </table>   
