--- a/views/category.ejs
+++ b/views/category.ejs
@@ -48,8 +48,8 @@
               href="/category/<%= category._id %>/randomCards"
               class="btn btn-sm btn-outline-danger mx-2"
               style="border: none"
-              ><i class="fas fa-random"></i></a
-            >
+              ><i class="fas fa-random"></i
+            ></a>
             <% } %>
           </div>
           <% } %> <% if (category.numOfQuestions > 0) { %>
@@ -64,8 +64,8 @@
               href="/category/<%= category._id %>/testRandom"
               class="btn btn-sm btn-outline-danger mx-2"
               style="border: none"
-              ><i class="fas fa-random"></i></a
-            >
+              ><i class="fas fa-random"></i
+            ></a>
             <% } %>
           </div>
           <% } %>
@@ -118,7 +118,13 @@
       <% } %>
       <div class="row mb-3 mt-2">
         <div class="col-12 d-flex justify-content-center">
-          <a href="#" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#shareModal">Sdílet předmět <i class="fas fa-share-alt"></i></a>
+          <a
+            href="#"
+            class="btn btn-danger"
+            data-bs-toggle="modal"
+            data-bs-target="#shareModal"
+            >Sdílet předmět <i class="fas fa-share-alt"></i
+          ></a>
         </div>
       </div>
     </div>
@@ -135,20 +141,20 @@
           </div>
           <div class="col-8 d-flex justify-content-end align-items-center">
             <% if (isAuthor) { %>
-              <a
+            <a
               href=""
               class="btn btn-sm btn-danger mx-2"
               data-bs-toggle="modal"
               data-bs-target="#createWithAIModal"
               >Generovat pomocí AI</a
-              >
-              <a
-                href=""
-                class="btn btn-sm btn-outline-danger mx-2"
-                data-bs-toggle="modal"
-                data-bs-target="#createWithoutAIModal"
-                >Vytvořit bez AI</a
-              >
+            >
+            <a
+              href=""
+              class="btn btn-sm btn-outline-danger mx-2"
+              data-bs-toggle="modal"
+              data-bs-target="#createWithoutAIModal"
+              >Vytvořit bez AI</a
+            >
             <% } %>
           </div>
           <div class="col-1 d-flex justify-content-end align-items-center">
@@ -175,22 +181,22 @@
           Tento předmět zatím neobsahuje žádné balíčky.
         </h5>
         <% if (isAuthor) { %>
-          <div class="d-flex justify-content-center align-items-center">
-            <a
-              href=""
-              class="btn btn-danger mt-3 mx-2"
-              data-bs-toggle="modal"
-              data-bs-target="#createWithAIModal"
-              >Generovat pomocí AI</a
-            >
-            <a
-              href=""
-              class="btn btn-outline-danger mt-3 mx-2"
-              data-bs-toggle="modal"
-              data-bs-target="#createWithoutAIModal"
-              >Vytvořit bez AI</a
-            >
-          </div>
+        <div class="d-flex justify-content-center align-items-center">
+          <a
+            href=""
+            class="btn btn-danger mt-3 mx-2"
+            data-bs-toggle="modal"
+            data-bs-target="#createWithAIModal"
+            >Generovat pomocí AI</a
+          >
+          <a
+            href=""
+            class="btn btn-outline-danger mt-3 mx-2"
+            data-bs-toggle="modal"
+            data-bs-target="#createWithoutAIModal"
+            >Vytvořit bez AI</a
+          >
+        </div>
         <% } %>
       </div>
     </div>
@@ -428,18 +434,32 @@
         <h3 class="text-center">Sdílej předmět s přáteli</h3>
         <div>
           <div class="d-flex justify-content-center align-items-center">
-            <span class="card border-grey m-3 px-5 py-3 shareIdSpan"><%= category.shareId %></span>  
-          </div>  
+            <span class="card border-grey m-3 px-5 py-3 shareIdSpan"
+              ><%= category.shareId %></span
+            >
+          </div>
         </div>
         <div>
-          <p class="text-center mb-3">nebo</p>  
+          <p class="text-center mb-3">nebo</p>
         </div>
         <div class="d-flex justify-content-center align-items-center">
-          <input type="text" class="form-control" value="<%= shareLink %>" id="shareLink" />
-          <button class="btn btn-danger mx-2" id="shareLinkButton"><i class="far fa-copy"></i></button>
+          <input
+            type="text"
+            class="form-control"
+            value="<%= shareLink %>"
+            id="shareLink"
+          />
+          <button class="btn btn-danger mx-2" id="shareLinkButton">
+            <i class="far fa-copy"></i>
+          </button>
         </div>
         <div class="mt-3">
-          <p class="text-primary text-center hidden" id="copy-confirmation-text">Zkopírováno do schránky</p>
+          <p
+            class="text-primary text-center hidden"
+            id="copy-confirmation-text"
+          >
+            Zkopírováno do schránky
+          </p>
         </div>
       </div>
     </div>
@@ -466,7 +486,9 @@
             Nahrajte soubor ve formátu .docx, .pdf nebo .pptx.
           </p>
           <p class="text-muted text-smaller mb-3">
-            Máte k dispozici <b><%= currentUser.credits + currentUser.extraCredits %></b> kreditů.
+            Máte k dispozici
+            <b><%= currentUser.credits + currentUser.extraCredits %></b>
+            kreditů.
           </p>
         </div>
         <form
@@ -568,10 +590,20 @@
                 accept=".pdf, .docx, .pptx"
                 required
               />
+              <% if (currentUser && !currentUser.isPremium){ %>
+              <p class="text-muted text-smaller my-1">
+                Maximální rozsah textu je 25 stran -
+                <a href="/premium">zvýšit na 150 stran</a>.
+              </p>
+              <% } else { %>
+              <p class="text-muted text-smaller my-1">
+                Maximální rozsah textu je 150 stran (270 000 znaků).
+              </p>
+              <% } %>
             </div>
           </div>
           <div class="row">
-            <div class="col-12 d-flex justify-content-center mt-5">
+            <div class="col-12 d-flex justify-content-center mt-3">
               <button class="btn btn-danger w-100" id="add-section-with-ai-btn">
                 Vygenerovat balíček z dokumentu
               </button>
@@ -596,8 +628,20 @@
           </p>
         </div>
         <div id="document-error-container" style="display: none">
-          <h5 class="mt-3 text-center">Nemáte dostatek kreditů</h5>
+          <h5 class="mt-3 text-center" id="document-error-headline">
+            Generování selhalo
+          </h5>
+          <hr class="color-primary mx-5" style="height: 2px" />
           <p class="text-center" id="document-error-text"></p>
+          <div class="d-flex justify-content-center">
+            <a
+              href="/premium"
+              id="premium-button"
+              class="btn btn-danger mt-2"
+              style="display: none"
+              >Zvýšit limit na 150 stran</a
+            >
+          </div>
         </div>
       </div>
     </div>
