--- a/views/category.ejs
+++ b/views/category.ejs
@@ -469,7 +469,7 @@
 <!-- Pouze owner - formular pro pridani sekce -->
 <% if (isAuthor) { %>
 <!-- MODAL - Create section with AI -->
-<div class="modal fade" id="createWithAIModal" tabindex="-1">
+<div class="modal fade modal-generate-ai" id="createWithAIModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered edit-modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -611,7 +611,13 @@
           </div>
         </form>
         <div id="document-progress-container">
-          <h5 class="mt-3 text-center mb-3">Generuji kartičky a otázky...</h5>
+          <h5 class="mt-3 text-center mb-2">Generuji kartičky a otázky...</h5>
+          <p
+            class="text-muted text-center mb-2 text-smaller"
+            id="expected-time"
+          >
+            Očekávaná doba generování je...
+          </p>
           <div id="progress-bar-container">
             <div id="progress-bar"></div>
           </div>
