--- a/views/index.ejs
+++ b/views/index.ejs
@@ -367,7 +367,11 @@
             <div
               class="col-12 d-flex justify-content-center align-items-center"
             >
-              <a href="/auth/user/new" class="btn btn-lg btn-danger mb-4"
+              <a
+                href=""
+                class="btn btn-lg btn-danger mb-4"
+                data-bs-toggle="modal"
+                data-bs-target="#createWithAIModal"
                 >Vyzkoušet generování</a
               >
             </div>
@@ -611,4 +615,92 @@
     <script type="text/javascript" src="/js/cookies.js"></script>
     <script type="text/javascript" src="/js/landing.js"></script>
   </body>
+
+  <!-- MODAL - Create section with AI -->
+  <div
+    class="modal fade modal-generate-ai"
+    id="createWithAIModal"
+    tabindex="-1"
+  >
+    <div class="modal-dialog modal-dialog-centered edit-modal">
+      <div class="modal-content">
+        <div class="modal-header" style="border: none">
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+          ></button>
+        </div>
+        <div class="modal-body m-2 mt-0 pt-0">
+          <h5 class="modal-title text-center">Vygenerovat obsah pomocí AI</h5>
+          <div id="document-formats-container">
+            <p class="text-muted mb-1 mt-2 text-center">
+              Nahrajte soubor ve formátu .docx, .pdf nebo .pptx.
+            </p>
+          </div>
+          <form
+            action="/demo/generateContent"
+            id="add-section-with-ai-form"
+            method="POST"
+            enctype="multipart/form-data"
+          >
+            <div class="row mt-4">
+              <div class="col-lg-12">
+                <input
+                  class="form-control form-borders border-darkgrey"
+                  type="file"
+                  id="document"
+                  name="document"
+                  accept=".pdf, .docx, .pptx"
+                  required
+                />
+                <p class="text-muted text-smaller my-1">
+                  Maximální rozsah textu v demo režimu je 25 stran.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 d-flex justify-content-center mt-4">
+                <button
+                  class="btn btn-lg btn-danger"
+                  id="add-section-with-ai-btn"
+                >
+                  Vygenerovat
+                </button>
+              </div>
+            </div>
+          </form>
+          <div id="document-progress-container">
+            <p
+              class="text-muted text-center mb-2 text-smaller"
+              id="expected-time"
+            >
+              Očekávaná doba generování je...
+            </p>
+            <div id="progress-bar-container">
+              <div id="progress-bar"></div>
+            </div>
+            <p id="progress-text">Čekám na nahrání souboru...</p>
+          </div>
+          <div id="document-success-container" style="display: none">
+            <h5 class="mt-3 text-center">Dokončeno!</h5>
+            <div class="d-flex justify-content-center mt-2">
+              <a href="/demo/showAll" class="btn btn-danger"
+                >Zobrazit vygenerovaný obsah</a
+              >
+            </div>
+          </div>
+          <div id="document-error-container" style="display: none">
+            <h5 class="mt-3 text-center" id="document-error-headline">
+              Generování selhalo
+            </h5>
+            <hr class="color-primary mx-5" style="height: 2px" />
+            <p class="text-center" id="document-error-text"></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="/js/document_demo.js"></script>
 </html>
