--- a/views/index.ejs
+++ b/views/index.ejs
@@ -685,7 +685,7 @@
           <div id="document-success-container" style="display: none">
             <h5 class="mt-3 text-center">Dokončeno!</h5>
             <div class="d-flex justify-content-center mt-2">
-              <a href="/demo/showAll" class="btn btn-danger"
+              <a href="" class="btn btn-danger" id="show-generated-content-btn"
                 >Zobrazit vygenerovaný obsah</a
               >
             </div>
