--- a/views/review/showAll.ejs
+++ b/views/review/showAll.ejs
@@ -3,7 +3,11 @@
 
     <div class="row">
       <div class="offset-1 col-10 d-flex justify-content-between mb-4">
-          <a href="/category/<%= section.categoryId %>" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
+          <% if (!demo) { %>
+            <a href="/category/<%= section.categoryId %>" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
+          <% } else { %>
+            <a href="/" class="btn btn-outline-danger d-flex justify-content-center align-items-center px-3"><i class="fas fa-arrow-left"></i></a>
+          <% } %>
           <div></div>
       </div>
   </div>
@@ -16,7 +20,9 @@
   <div class="row mt-4 mb-3">
     <div class="offset-sm-1 col-sm-5 d-flex flex-column justify-content-between align-items-center">
       <h4 class="mb-2">Kartičky</h4>
-      <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
+      <% if (!demo) { %>
+        <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/newCard" class="btn btn-sm btn-outline-danger">Přidat kartičku</a>
+      <% } %>
     </div>  
     <div class="col-sm-5 d-flex flex-column justify-content-center align-items-center">
       <h4 class="mb-2">Otázky</h4>
@@ -31,7 +37,9 @@
                 <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/question/generate" class="btn btn-sm btn-outline-danger" style='min-width:124px' id="generate-ai">Vygenerovat otázky z kartiček</a>
             <% } %>
           -->
-          <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/question/new" class="btn btn-sm btn-outline-danger">Přidat otázku</a>
+          <% if (!demo) { %>
+            <a href="/category/<%= section.categoryId %>/section/<%= section._id %>/question/new" class="btn btn-sm btn-outline-danger">Přidat otázku</a>
+          <% } %>
       </div>
       
     </div>
